<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="#212121"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imgupload"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/ic_photo_camera_black_24dp"
        android:scaleType="centerCrop"
        android:cropToPadding="true"
        android:layout_centerHorizontal="true"/>
    <TextView
        android:textSize="18sp"
        android:textColor="#fff"
        android:gravity="center"
        android:id="@+id/txtalreadyreg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/Login"
        android:layout_alignParentBottom="true"/>
    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/linearlayoutreg"
        android:padding="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:layout_above="@+id/txtalreadyreg">
        <EditText
            android:textColor="#fff"
            android:textColorHint="#fff"
            android:id="@+id/firstname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/FirstName"
            android:inputType="text"/>
        <EditText
            android:textColor="#fff"
            android:textColorHint="#fff"
            android:id="@+id/lastname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/LastName"
            android:inputType="text"/>
        <EditText
            android:textColor="#fff"
            android:textColorHint="#fff"
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Email"
            android:inputType="textEmailAddress"/>
        <EditText
            android:textColor="#fff"
            android:textColorHint="#fff"
            android:id="@+id/phonenum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Phonenumber"
            android:inputType="number"/>
        <EditText
            android:textColor="#fff"
            android:textColorHint="#fff"
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Password"
            android:inputType="textPassword"/>
        <EditText
            android:textColor="#fff"
            android:textColorHint="#fff"
            android:id="@+id/confermpassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ConfirmPassword"
            android:inputType="textPassword"/>
        <Button
            android:textColor="#fff"
            android:id="@+id/btnregister"
            android:background="#0298a8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Register"/>
    </LinearLayout>
    <ProgressBar
        android:id="@+id/progressBarimageload"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true" style="?android:attr/progressBarStyle"/>
</RelativeLayout>
