<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/relativelayoutlogin"
    android:background="#212121"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginBottom="24dp"
        android:src="@drawable/appiconfinal"
        android:scaleType="centerCrop"
        android:adjustViewBounds="true"
        android:cropToPadding="true"
        android:layout_above="@+id/linearlogin"
        android:layout_centerHorizontal="true"/>
    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/linearlogin"
        android:padding="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:layout_centerInParent="true">
        <EditText
            android:textColor="#fff"
            android:textColorHint="#fff"
            android:id="@+id/loginemail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Email"
            android:inputType="textEmailAddress"/>
        <EditText
            android:textColor="#fff"
            android:textColorHint="#fff"
            android:id="@+id/loginpassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Password"
            android:inputType="textPassword"/>
        <Button
            android:textColor="#fff"
            android:id="@+id/btnlogin"
            android:background="#0298a8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/Login"/>
    </LinearLayout>
    <TextView
        android:textSize="18sp"
        android:textColor="#fff"
        android:gravity="center"
        android:id="@+id/txtforget"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/ForgetPasword"
        android:layout_above="@+id/txtreghere"/>
    <TextView
        android:textSize="18sp"
        android:textColor="#fff"
        android:gravity="center"
        android:id="@+id/txtreghere"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/Registerhere"
        android:layout_alignParentBottom="true"/>
</RelativeLayout>
