<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="#212121"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ImageView
        android:id="@+id/appicon"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="51dp"
        android:src="@drawable/appiconfinal"
        android:scaleType="centerCrop"
        android:adjustViewBounds="true"
        android:cropToPadding="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"/>
    <TextView
        android:textColor="#fff"
        android:gravity="center"
        android:id="@+id/txtfrg"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:text="@string/resetPassword"
        android:layout_below="@+id/appicon"/>
    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/linearlayoutreg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:layout_centerInParent="true"
        android:paddingStart="8dp">
        <EditText
            android:textColor="#fff"
            android:textColorHint="#fff"
            android:id="@+id/emailreset"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Email"
            android:inputType="textEmailAddress"/>
    </LinearLayout>
    <Button
        android:textColor="#fff"
        android:id="@+id/btnreset"
        android:background="#0298a8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/ResetPassword"
        android:layout_alignParentBottom="true"/>
</RelativeLayout>
