<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:id="@+id/hori_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_margin="5dp"
        android:fillViewport="false"
        android:foregroundGravity="left">

        <androidx.cardview.widget.CardView
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_margin="10dp"
            app:cardCornerRadius="50dp"
            app:cardBackgroundColor="@color/grey"


            >

            <ImageView
                android:id="@+id/uploadimage"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_margin="5dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_add_a_photo_black_24dp"
                android:scaleType="centerCrop"
                />
        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/linearsecoundlast"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_below="@+id/hori_scroll_view">

        <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"

            >
        <EditText
            android:textColor="#000"
            android:textColorHint="#000"
            android:id="@+id/edttitle"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="5dp"
            android:hint="@string/Title"
            android:maxLines="1"
            android:maxLength="25"
            android:inputType="text"
            android:layout_gravity="center"/>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="50dp"

            android:layout_marginTop="5dp"
            >
        <EditText
            android:textColor="#000"
            android:textColorHint="#000"
            android:id="@+id/edtPhone"
            android:padding="5dp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="5dp"
            android:hint="@string/Phonenumber"
            android:inputType="phone"/>
        </androidx.cardview.widget.CardView>

      <LinearLayout
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:orientation="horizontal"
          android:layout_marginTop="5dp">
          <RelativeLayout
              android:id="@+id/relpickloction"
              android:background="@drawable/txtbackground"
              android:layout_width="0dp"
              android:layout_weight="1"
              android:layout_marginLeft="2dp"
              android:layout_marginRight="2dp"
              android:layout_height="50dp"
              android:paddingTop="5dp"
              >
              <androidx.cardview.widget.CardView
                  android:layout_width="match_parent"
                  android:layout_height="50dp"
                  >
                  <ImageView
                      android:id="@+id/ic_pick_location"
                      android:background="@drawable/ic_navigate_next_black_24dp"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:layout_alignParentEnd="true"
                      android:layout_centerVertical="true"
                      android:layout_gravity="end"
                      android:layout_margin="25dp"/>
              </androidx.cardview.widget.CardView>

              <androidx.cardview.widget.CardView
                  android:layout_width="match_parent"
                  android:layout_height="50dp"
                  android:padding="5dp"
                  android:layout_marginTop="5dp"
                  >

                  <TextView
                      android:textColor="#000"
                      android:textColorHint="#000"
                      android:id="@+id/edtlocationpick"
                      android:layout_width="match_parent"
                      android:layout_height="20dp"
                      android:hint="@string/ChooseLocation"
                      android:layout_toStartOf="@+id/ic_pick_location"/>
              </androidx.cardview.widget.CardView>
          </RelativeLayout>

          <RelativeLayout
              android:background="@drawable/txtbackground"
              android:layout_width="0dp"
              android:layout_weight="1"
              android:layout_marginLeft="2dp"
              android:layout_marginRight="2dp"
              android:layout_height="50dp">
              <androidx.cardview.widget.CardView
                  android:layout_width="match_parent"
                  android:layout_height="50dp"
                  >
                  <ImageView
                      android:id="@+id/ic_date"
                      android:background="@drawable/ic_calender_black_24dp"
                      android:layout_width="wrap_content"

                      android:layout_height="wrap_content"
                      android:layout_gravity="center"
                      android:layout_alignParentEnd="true"
                      android:layout_centerVertical="true"/>

                  <TextView
                      android:textColor="#000"
                      android:textColorHint="#000"
                      android:id="@+id/edtdateuplod"
                      android:layout_width="match_parent"
                      android:layout_height="30dp"
                      android:layout_marginTop="5dp"

                      android:hint="@string/Date"
                      android:layout_toStartOf="@+id/ic_date"
                      android:layout_alignBottom="@+id/ic_date"
                      android:layout_alignParentStart="true"/>
              </androidx.cardview.widget.CardView>
          </RelativeLayout>

      </LinearLayout>
        <RelativeLayout
            android:id="@+id/pick_category"
            android:background="@drawable/txtbackground"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginTop="5dp">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="50dp"

                >
            <Spinner
                android:entries="@array/Category"
                android:id="@+id/spinr_category"
                android:layout_width="match_parent"
                android:layout_height="50dp">

            </Spinner>
            </androidx.cardview.widget.CardView>
        </RelativeLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginTop="5dp"
            >
        <EditText android:textColor="#000"
            android:textColorHint="#000"
            android:gravity="start"
            android:id="@+id/edtdescription"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_marginTop="5dp"
            android:hint="@string/Description"
            />
        </androidx.cardview.widget.CardView>
        <Button android:textColor="#fff"
            android:id="@+id/btnupload"
            android:background="#0298a8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/Submitt"
            android:textAllCaps="false"/>

    </LinearLayout>


</RelativeLayout>
